[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DAGENT"
version = "0.1.0"
description = "AI-powered Disaster Assistant"
authors = [
    { name="Rolland Luo", email="rolland.2016@outlook.com" }
]
readme = "README.md"
requires-python = "==3.12.7"

dependencies = [
    "gradio",
    "openai",
    "faiss-cpu",
    "python-dotenv"
]